build os sonarqube wqorking