@@ -25,14 +25,12 @@ public class EnumsController {
     @GetMapping("/allCategories")
     public ResponseEntity<List<String>> getAllCategories() {
         return ResponseEntity.ok(enumsService.getAllCategories().stream()
-                .map(Enum::name)
-                .collect(Collectors.toList()));
+                .map(Enum::name).toList());
     }
 
     @GetMapping("/allCurrencies")
     public ResponseEntity<List<String>> getAllCurrencies() {
         return ResponseEntity.ok(enumsService.getAllCurrencies().stream()
-                .map(Enum::name)
-                .collect(Collectors.toList()));
+                .map(Enum::name).toList());
     }
 }
